WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124798
[Mac] Can't drag full-screen video to another monitor
https://bugs.webkit.org/show_bug.cgi?id=124798
Summary
[Mac] Can't drag full-screen video to another monitor
Jer Noble
Reported
2013-11-22 16:09:20 PST
[Mac] Can't drag full-screen video to another monitor
Attachments
Patch
(3.18 KB, patch)
2013-11-22 16:18 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-11-22 16:18:25 PST
Created
attachment 217726
[details]
Patch
Geoffrey Garen
Comment 2
2013-11-22 16:20:36 PST
Comment on
attachment 217726
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-11-22 16:55:24 PST
Comment on
attachment 217726
[details]
Patch Clearing flags on attachment: 217726 Committed
r159722
: <
http://trac.webkit.org/changeset/159722
>
WebKit Commit Bot
Comment 4
2013-11-22 16:55:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug