[Mac] Can't drag full-screen video to another monitor https://bugs.webkit.org/show_bug.cgi?id=124798

Reviewed by Geoffrey Garen.

Source/WebCore:

Make full screen windows movable by default. Previously, we wanted non-movable full screen
windows since they were in the same space and were just placed atop non-full screen windows.
Now that all our supported Mac platforms have explicit full screen support, we can remove this
non-movable restriction.

* platform/mac/WebCoreFullScreenWindow.mm:
(-[WebCoreFullScreenWindow initWithContentRect:styleMask:backing:defer:]):

Source/WebKit2:

Make full screen windows resizable by default. This allows the window to be resized when
moved between monitors with different resolutions.

* UIProcess/API/mac/WKView.mm:
(-[WKView createFullScreenWindow]):


Canonical link: https://commits.webkit.org/142973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159722 268f45cc-cd09-0410-ab3c-d52691b4dbfc